--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -1,14 +1,24 @@
-#server.port=9099
+server.port=9099
+management.security.enabled=false
+management.endpoints.web.exposure.include=*
+my.property=Value1
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=sys as SYSDBA
+spring.datasource.password=admin@1234
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=none
 
 # H2 Database config (as a persisted database not In memory)
-spring.datasource.name=learning_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.initialize=false
-spring.datasource.url=jdbc:h2:~/learning_db;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=TRUE;DB_CLOSE_DELAY=-1;
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto = none
+#spring.datasource.name=learning_db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.initialize=false
+#spring.datasource.url=jdbc:h2:~/learning_db;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=TRUE;DB_CLOSE_DELAY=-1;
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto = none
 
 # Note : for jsp add tomcat-embed-jasper dependency also
 #spring.mvc.view.prefix=/WEB-INF/jsp/
